[gd_scene load_steps=2 format=3 uid="uid://dam6xbir407me"]

[ext_resource type="Script" path="res://main.gd" id="1_teyo1"]

[node name="Main" type="Node2D"]
script = ExtResource("1_teyo1")

[node name="Play" type="Button" parent="."]
offset_left = 368.0
offset_top = 64.0
offset_right = 776.0
offset_bottom = 202.0
text = "Play"

[node name="Play2" type="Button" parent="."]
offset_left = 363.0
offset_top = 246.0
offset_right = 771.0
offset_bottom = 384.0
text = "Test World"

[node name="Quit" type="Button" parent="."]
offset_left = 355.0
offset_top = 437.0
offset_right = 778.0
offset_bottom = 571.0
tooltip_text = "This is a quit button
"
text = "Quit
"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Play2" to="." method="_on_play_2_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
